CurrentUserId and TenantId resolution
- Refactored the code to use a slightly different approach for
resolving the User and Tenant inside ApplicationDbContext
- Refactored ICurrentTenantUserService interface with just getters
properties
- Removed the UserResolver middleware
- Refactored the seeding of the static data using migration instead of middleware
- Added new migrations for seeding
- Refactored Login.cshtml.cs to add additional tenant claim
which was selected at the login screen

--- a/NanoSingular.RazorApi/Pages/Authentication/Login.cshtml
+++ b/NanoSingular.RazorApi/Pages/Authentication/Login.cshtml
@@ -55,7 +55,7 @@
                             Tenant
                         </div>
                         <div class="field-group__input-area">
-                            <select id="tenant">
+                            <select id="tenant" asp-for="Input.Tenant">
                                 <option value="root">Root</option>
                                 <option value="beta">Beta</option>
                                 <option value="beta">Gamma</option>
