--- a/NanoSingular.RazorApi/Pages/Shared/_Layout.cshtml
+++ b/NanoSingular.RazorApi/Pages/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
             </a>
 
 
-            <a class="side-nav__links__link" asp-page="/Index">
+            <a class="side-nav__links__link" asp-page="/Tenants/Index">
                 <svg>
-                    <use xlink:href="/assets/css/sprite.svg#icon-multiple"></use>
+                    <use xlink:href="/assets/css/sprite.svg#icon-cogwheel"></use>
                 </svg>
             </a>
         </div>
