--- a/NanoSingular.RazorApi/Pages/Shared/_LayoutGuest.cshtml
+++ b/NanoSingular.RazorApi/Pages/Shared/_LayoutGuest.cshtml
@@ -13,6 +13,7 @@
 
 <body>
     @RenderBody()
+    <script src="~/vendor/jquery/jQuery-3.6.0.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
