--- a/NanoSingular.RazorApi/Pages/Authentication/ForgotPassword.cshtml
+++ b/NanoSingular.RazorApi/Pages/Authentication/ForgotPassword.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
-@model LoginModel
-
+@model NanoSingular.RazorApi.Pages.Authentication.ForgotPasswordModel
 @{
-    ViewData["Title"] = "Log in";  
+    ViewData["Title"] = "Forgot Password";
 }
 
 <!-- Login -->
@@ -16,7 +15,7 @@
                 <img src="/assets/img/logo-green.png" alt="Logo" />
             </div>
             <div class="full-view__content__intro__title">
-                Sign In
+                Reset your password
             </div>
         </div>
 
@@ -28,8 +27,7 @@
 
                 <!-- Username / Password -->
                 <div class="login__credentials">
-                    <input asp-for="Input.Email" class="paper-input" autocomplete="username" aria-required="true" placeholder="name@example.com" id="username"/>
-                    <input asp-for="Input.Password" class="paper-input" type="password" placeholder="Password" id="password">
+                    <input class="paper-input" aria-required="true" placeholder="name@example.com" id="username" />
                 </div>
 
                 <!-- Submit -->
@@ -38,25 +36,15 @@
                         Submit
                     </button>
                 </div>
-                <div class="login__info">
-                    <div class="login__info__title">
-                        Welcome
-                    </div>
-                    <div class="login__info__text">
-                        For the demo, specify the tenant with the dropdown. ASP Nano can resolve tenants by subdomain in real deployments. Click the Admin Credentials to quickly populate fields.
-                    </div>
-                </div>
                 <div class="login__demo-controls">
-                    <button class="btn outline" type="button" id="credentials">
-                        Admin Credentials
-                    </button>
+
                     <!-- Field Group -->
                     <div class="field-group">
                         <div class="field-group__title">
                             Tenant
                         </div>
                         <div class="field-group__input-area">
-                            <select id="tenant" asp-for="Input.Tenant">
+                            <select id="tenant">
                                 <option value="root">Root</option>
                                 <option value="beta">Beta</option>
                                 <option value="gamma">Gamma</option>
@@ -72,9 +60,3 @@
     </div>
 
 </div>
-
-
-
-@section Scripts {
-    <script src="~/assets/js/pages/auth/login.js" asp-append-version="true"></script>
-}
