--- a/NanoSingular.RazorApi/Pages/Snippets.cshtml
+++ b/NanoSingular.RazorApi/Pages/Snippets.cshtml
@@ -3,4 +3,23 @@
 @{
 }
 
-
+<!-- Options Tooltip -->
+<div class="popper-tooltip" id="options-tooltip" role="tooltip">
+    <div class="popper-tooltip__section">
+        <div class="popper-tooltip__section__heading">
+            View Options
+        </div>
+        <ul class="popper-tooltip__section__list">
+            <li class="popper-tooltip__section__list__item">
+                <button class="popper-menu-button view-mode-option" value="table">
+                    Table
+                </button>
+            </li>
+            <li class="popper-tooltip__section__list__item">
+                <button class="popper-menu-button view-mode-option" value="grid">
+                    Grid
+                </button>
+            </li>
+        </ul>
+    </div>
+</div>
