--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/abstracts/_variables.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 
 
 // COLOR VARIABLES
-$color-primary: #0095ff;
+//$color-primary: #0095ff;
 $color-primary-light: #3eafff;
 $color-white: #fff; 
 $color-black: #000000;
