--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/base/_buttons.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/base/_buttons.scss
@@ -5,15 +5,16 @@
     border-radius: 1rem;
     border: none;
     font-family: $font-primary;
-    color: $color-white;
+    color: var(--color-white);
     font-weight: 600;
     cursor: pointer;
-    background-color: $color-primary;
+    background-color: var(--color-primary);
     transition: all 0.1s;
     display: flex;
     align-items: center;
+    text-decoration: none;
     &:hover {
-        background-color: $color-primary-light;
+        background-color: var(--color-primary-light);
     }
 
     &:nth-child(2){
@@ -26,8 +27,8 @@
     }
 
     &.active {
-        background-color: $color-primary;
-        color: $color-white;
+        background-color: var(--color-primary);
+        color: var(--color-white);
     }
 
     &:disabled,
@@ -41,8 +42,8 @@
         background-color: transparent;
         color: var(--color-neutral);
         &:hover {
-            color: $color-white;
-            background-color: $color-primary;
+            color: var(--color-white);
+            background-color: var(--color-primary);
         }
     }
 
@@ -52,7 +53,7 @@
         border: 2px solid var(--color-paper-light-x2);
         &:hover {
             color: var(--color-ink);
-            border: 2px solid $color-primary;
+            border: 2px solid var(--color-primary);
             background-color: transparent;
         }
     }
@@ -88,8 +89,8 @@
 
     &:hover {
         color: var(--color-ink);
-        border-color: $color-primary;
-        background-color: rgba($color-primary, 0.1);
+        border-color: var(--color-primary);
+        background-color: rgba(var(--color-primary), 0.1);
     }
 
     &:disabled {
@@ -123,8 +124,8 @@
 
     &.active {
         color: var(--color-ink);
-        border-color: $color-primary;
-        background-color: rgba($color-primary, 0.1);
+        border-color: var(--color-primary);
+        background-color: rgba(var(--color-primary), 0.1);
     }
 
     & svg {
@@ -149,7 +150,7 @@
     color: var(--color-neutral);
     &:hover {
         background-color: var(--color-paper-light);
-        color: $color-gold;
+        color: var(--color-gold);
     }
 
     & svg {
