--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/main.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/popper";
 @import "base/modal";
 @import "base/grid-block";
+@import "base/tab-panel";
 
 //@import "base/animations";
 //@import "base/utilities";
@@ -28,6 +29,7 @@
 //header
 @import "layout/header";
 @import "layout/side-nav";
+@import "layout/page-menu";
 
 //@import "layout/nav-top";
 //@import "layout/nav-side";
