--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_blocks.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_blocks.scss
@@ -21,7 +21,7 @@
 
 
 //page block - or something
-.entity-block {
+.entity-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,7 +38,7 @@
 
 
     &__title-area {
-        & img {
+        & .avatar__image-area {
             transform: translateY(-2rem);
         }
     }
@@ -75,7 +75,7 @@
         }
 
         &.active {
-            color: $color-primary;
+            color: var(--color-primary);
 
             &::after {
                 content: "";
@@ -84,7 +84,7 @@
                 width: 100%;
                 bottom: 0rem;
                 left: 0;
-                background-color: $color-primary;
+                background-color: var(--color-primary);
             }
         }
     }
@@ -97,10 +97,23 @@
     &:not(:last-child) {
         margin-bottom: 4rem;
     }
-    
+
+    &--inline-button {
+        display: grid;
+        grid-template-columns: 1fr max-content;
+
+        & .form-block__title {
+            grid-column: 1 / -1;
+        }
+        & .form-block__buttons {
+            display: flex;
+            align-items: flex-end;
+            padding-bottom: 2rem;
+        }
+    }
     
     &__title {
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
         padding-bottom: 1.5rem;
         border-bottom: 1px solid var(--color-paper-light-x2);
     }
@@ -110,7 +123,7 @@
         }
 
         & > div {
-            margin-top: 1rem;
+            margin-bottom: 1rem;
         }
 
         &.flex-fields {
@@ -133,6 +146,9 @@
         }
     }
     &__buttons {
+        padding-top: 1rem;
+        display: flex;
+        justify-content: flex-end;
     }
 }
 
