--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_cards.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_cards.scss
@@ -1,4 +1,3 @@
-
 // Departure / Cabin data
 .information-card {
     border-radius: 1rem;
@@ -30,15 +29,12 @@
         align-items: center;
 
         &__right {
-            
         }
-
 
         &__left {
             display: flex;
             flex-direction: column;
             align-items: center;
-
         }
     }
 }
@@ -50,6 +46,28 @@
     gap: 2rem;
     align-items: center;
     position: relative;
+
+    
+    &__cta {
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        left: 7rem;
+        width: 3.5rem;
+        height: 3.5rem;
+        background-color: var(--color-primary);
+        border-radius: 50%;
+        z-index: 10;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid var(--color-paper-light);
+        & svg {
+            height: 1.5rem;
+            width: 1.5rem;
+            color: var(--color-black);
+        }
+    }
 
     &--small {
         gap: 1rem;
@@ -71,7 +89,7 @@
     &--large {
         gap: 2rem;
 
-        & .avatar__image-area img {
+        & .avatar__image-area {
             height: 10rem;
             width: 10rem;
         }
@@ -85,17 +103,24 @@
         }
     }
 
-
     &__image-area {
         display: flex;
         align-items: center;
+        justify-content: center;
         user-select: none;
-
+        height: 8rem;
+        width: 8rem;
+        border-radius: 8rem;
+        overflow: hidden;
+        background-color: var(--color-paper-light-x3);
         & img {
-            height: 8rem;
-            width: 8rem;
-            border-radius: 8rem;
             object-fit: cover;
+        }
+
+        & svg {
+            height: 40%;
+            width: 40%;
+            color: var(--color-neutral);
         }
     }
 
@@ -109,7 +134,7 @@
             }
         }
         &__sub {
-            margin-top: .3rem;
+            margin-top: 0.3rem;
             color: var(--color-neutral);
         }
     }
