--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_form.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_form.scss
@@ -78,7 +78,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: $color-primary;
+        background-color: var(--color-primary);
         opacity: 0;
         transition: all 0.3s;
       }
@@ -98,7 +98,7 @@
     background-color: var(--color-paper-light-x2);
 
     & .radio-group__label__button {
-      color: $color-primary;
+      color: var(--color-primary);
     }
     & .radio-group__label__button::after {
       opacity: 1;
