--- a/NanoSingular.RazorApi/Pages/Profile/Index.cshtml
+++ b/NanoSingular.RazorApi/Pages/Profile/Index.cshtml
@@ -109,7 +109,7 @@
                 </div>
 
             </div>
-            <div class="form-block__buttons">
+            <div class="form-block__cta">
                 <button class="btn small" disabled>Save Changes</button>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </div>
 
             </div>
-            <div class="form-block__buttons">
+            <div class="form-block__cta">
                 <button class="btn small" disabled>Save Changes</button>
             </div>
         </div>
@@ -187,7 +187,7 @@
                 </div>
 
             </div>
-            <div class="form-block__buttons">
+            <div class="form-block__cta">
                 <button class="btn small" disabled>Save Changes</button>
             </div>
         </div>
