--- a/NanoSingular.RazorApi/Pages/Users/Index.cshtml
+++ b/NanoSingular.RazorApi/Pages/Users/Index.cshtml
@@ -172,7 +172,7 @@
         <!-- Modal Content: Bottom -->
         <div class="modal__content__bottom">
             <div class="modal__content__bottom__left">
-                <button class="btn edit-only" type="submit" id="deleteUserSubmit">
+                <button class="btn btn--outline btn--red edit-only" type="submit" id="deleteUserSubmit">
                     Delete
                 </button>
             </div>
