--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_form.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_form.scss
@@ -31,6 +31,12 @@
   }
 
   &__input-area {
+
+    & .red-text {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      display: block;
+    }
   }
 }
 
