--- a/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_blocks.scss
+++ b/NanoSingular.RazorApi/wwwroot/assets/css/sass/components/_blocks.scss
@@ -19,7 +19,6 @@
     }
 }
 
-
 //page block - or something
 .entity-header {
     display: flex;
@@ -30,12 +29,12 @@
     padding: 0rem 2rem;
     border-radius: 1rem;
     min-height: 10rem;
-    
+
     @media only screen and (max-width: $bp-large) {
         flex-direction: column;
         padding-bottom: 2rem;
+        align-items: flex-start;
     }
-
 
     &__title-area {
         & .avatar__image-area {
@@ -47,15 +46,11 @@
         display: flex;
         align-items: center;
 
-   
-
         & button:not(:last-child) {
             margin-right: 3rem;
         }
-        
     }
 }
-
 
 // ??
 .tab-list {
@@ -90,10 +85,7 @@
     }
 }
 
-
-
 .form-block {
-
     &:not(:last-child) {
         margin-bottom: 4rem;
     }
@@ -111,25 +103,21 @@
             padding-bottom: 2rem;
         }
     }
-    
+
     &__title {
         margin-bottom: 2rem;
         padding-bottom: 1.5rem;
         border-bottom: 1px solid var(--color-paper-light-x2);
     }
     &__fields {
-        &:not(:last-child) {
-            margin-bottom: 2rem;
-        }
-
         & > div {
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
         }
 
         &.flex-fields {
             display: flex;
             flex-wrap: wrap;
-            
+
             & > div {
                 margin-right: 3rem;
             }
@@ -145,10 +133,13 @@
             }
         }
     }
-    &__buttons {
-        padding-top: 1rem;
+    &__cta {
+        margin-top: 4rem;
         display: flex;
         justify-content: flex-end;
+
+        & button:not(:last-child) {
+            margin-right: 1rem;
+        }
     }
 }
-
